Mon May 10 00:35:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/console.c (ttymode): reverted previous commit.

Sun May  9 23:53:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (RB_GC_GUARD_PTR): get rid of removal by
	  optimization.

Sun May  9 23:07:53 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* proc.c (proc_dup): copy blockprocval.  proc_dup is used by
	  define_method, which made blockprocval be GC'ed mistakenly.
	  [ruby-core:30023]

Sun May  9 16:28:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (fiber_initialize_machine_stack_context): try to release
	  unnecessary fibers and retry to create.  based on a patch from
	  masaya tarui at [ruby-dev:41230].

Sun May  9 08:32:56 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json/generator/generator.c (fbuffer_inc_capa):
	  fix tha use of REALLOC_N. [ruby-dev:41227]

Sun May  9 09:30:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/{generator/generator.c,parser/parser.rl}: fixed indent.

	* ext/json/{generator,parser}/depend: added.

Sun May  9 09:15:03 2010  Shugo Maeda  <shugo@ruby-lang.org>

	* test/net/imap/test_imap.rb: use IPv4 for
	  test_imaps_post_connection_check.  [ruby-dev:41189]

Sun May  9 08:24:24 2010  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (disconnect): terminates @receiver_thread even if
	  @sock.shutdown raises an exception.  [ruby-dev:34881]

Sun May  9 06:15:21 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* io.c (nogvl_copy_stream_sendfile): ISO C90 forbids mixed
	  declarations and code.

Sun May  9 02:57:02 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/fiddle/lib/fiddle.rb: only require DL if it hasn't been required
	  yet. [ruby-core:30095]

Sun May  9 01:15:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (stackgrowdirection): removed duplicated code, use
	  STACK_UPPER macro instead.

	* gc.h (STACK_DIR_UPPER): moved from thread_pthread.c.
